--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.6.5",
+    "rsuite": "^4.10.2",
     "sass": "^1.43.2"
   },
   "devDependencies": {
