--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "bootstrap": "^5.1.3",
     "mongodb": "^4.1.4",
     "next": "12.0.4",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
+    "react-currency-format": "^1.0.0",
     "react-dom": "17.0.2",
     "react-multi-carousel": "^2.6.5",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "rsuite": "^4.10.2",
     "sass": "^1.43.2"
   },
